--- a/assets/scss/components/sections/skills/_skills.scss
+++ b/assets/scss/components/sections/skills/_skills.scss
@@ -2,6 +2,7 @@
 @use "../../../mixins" as *;
 
 .skills {
+
   @include sm-min {
     padding: $gap-sm;
   }
@@ -21,6 +22,7 @@
       gap: 10px;
       grid-template-areas: "a1 a1 a2 a3" "a4 a5 a5 a6" "a7 a8 a9 a6";
       grid-template-columns: repeat(4, 1fr);
+      margin-bottom: 30px;
     }
 
     @include lg-md {
