--- a/assets/scss/common/_classes.scss
+++ b/assets/scss/common/_classes.scss
@@ -34,6 +34,22 @@
       width: 170px;
       height: 40px;
     }
+
+    @include md-sm {
+      padding-top: 1px;
+
+      &:nth-of-type(2) {
+        padding-left: 17px;
+      }
+    }
+
+    @include sm {
+      padding-top: 2px;
+
+      &:nth-of-type(2) {
+        padding-left: 18px;
+      }
+    }
   }
 
   &--primary {
