--- a/assets/scss/components/header/_header.scss
+++ b/assets/scss/components/header/_header.scss
@@ -5,7 +5,7 @@
   position: relative;
   display: grid;
   min-height: 100vh;
-  padding: 150px 0;
+  padding: 150px 0 150px 1px;
   color: $color-light;
   background-color: $color-primary;
   background-image: url(../img/img-header.png);
@@ -13,11 +13,16 @@
   background-size: cover;
   align-content: center;
 
+  @include lg-md {
+    min-height: 766px;
+  }
+
   @include md-sm {
     padding-top: 32px;
+    min-height: 560px;
   }
 
   @include sm {
-    padding-top: 420px;
+    min-height: 992px;
   }
 }
