--- a/assets/scss/components/sections/_section-posts.scss
+++ b/assets/scss/components/sections/_section-posts.scss
@@ -19,10 +19,11 @@
   &__title {
     color: #2d3651;
     font-size: 40px;
-    letter-spacing: 4px;
+    letter-spacing: 3.95px;
     font-weight: 700;
     text-align: left;
-    margin-bottom: 56px;
+    margin-bottom: 58px;
+    font-family: "Roboto Slab", serif;
 
     @include lg-md {
       margin-bottom: 43px;
@@ -168,6 +169,8 @@
     letter-spacing: 0.9px;
     line-height: 20px;
     position: relative;
+    font-family: "Roboto Slab", serif;
+    text-align: center;
   }
 
   &__text {
