--- a/assets/scss/components/sections/skills/_skill-item.scss
+++ b/assets/scss/components/sections/skills/_skill-item.scss
@@ -6,48 +6,80 @@
   overflow: hidden;
 
   &:nth-of-type(1) {
+    @include lg-min {
+      margin-right: -1px;
+    }
+
     @include lg-md {
       margin-right: 4px;
     }
   }
 
   &:nth-of-type(2) {
+    @include lg-min {
+      margin-left: -1px;
+    }
+
     @include lg-md {
       margin-left: -4px;
     }
   }
 
   &:nth-of-type(3) {
+    @include lg-min {
+      margin-left: -2px;
+    }
+
     @include lg-md {
       margin-right: -5px;
     }
   }
 
   &:nth-of-type(4) {
+    @include lg-min {
+      margin: 0 -1px 0 0;
+    }
+
     @include lg-md {
       margin-left: 5px;
     }
   }
 
   &:nth-of-type(5) {
+    @include lg-min {
+      margin: 0 2px 0 1px;
+    }
+
     @include lg-md {
       margin-right: 4px;
     }
   }
 
   &:nth-of-type(6) {
+    @include lg-min {
+      margin: 0 0 0 -2px;
+    }
+
     @include lg-md {
       margin-left: -4px;
     }
   }
 
   &:nth-of-type(7) {
+    @include lg-min {
+      margin: 0 -1px 0 0;
+    }
+
     @include lg-md {
       margin-right: -3px;
     }
   }
 
   &:nth-of-type(8) {
+    @include lg-min {
+      margin: 0 -1px 0 1px;
+    }
+
     @include lg-md {
       margin-left: 5px;
       margin-right: 4px;
@@ -55,6 +87,10 @@
   }
 
   &:nth-of-type(9) {
+    @include lg-min {
+      margin: 0 2px 0 -1px;
+    }
+
     @include lg-md {
       margin-left: 5px;
     }
@@ -79,6 +115,11 @@
     z-index: 1;
     margin: 0;
     inset: 0;
+
+    @include lg-min {
+      padding: 2px 0 0 3px;
+      letter-spacing: 2px;
+    }
 
     @include md-min {
       font-size: 1.25rem;
