Style & code fixes

--- a/assets/scss/common/_classes.scss
+++ b/assets/scss/common/_classes.scss
@@ -23,11 +23,24 @@
       font-size: 1.125rem;
       width: 250px;
       height: 60px;
+
+      &:nth-of-type(1) {
+        padding-left: 19px;
+      }
+
+      &:nth-of-type(2) {
+        padding-left: 16px;
+      }
     }
 
     @include lg-md {
       width: 200px;
       height: 50px;
+      padding-left: 18px;
+
+      &:nth-of-type(2) {
+        margin-left: 1px;
+      }
     }
 
     @include md {
@@ -37,17 +50,22 @@
 
     @include md-sm {
       padding-top: 1px;
+      padding-left: 17px;
 
       &:nth-of-type(2) {
-        padding-left: 17px;
+        padding-left: 19px;
       }
     }
 
     @include sm {
       padding-top: 2px;
 
+      &:nth-of-type(1) {
+        padding-left: 17px;
+      }
+
       &:nth-of-type(2) {
-        padding-left: 18px;
+        padding-left: 19px;
       }
     }
   }
@@ -58,6 +76,10 @@
     height: 60px;
     font-size: 1.125rem;
 
+    @include lg-min {
+      padding-left: 19px;
+    }
+
     @include lg-md {
       padding-top: 5px;
       padding-right: 15px;
@@ -67,7 +89,7 @@
     @include md-sm {
       position: relative;
       left: 5px;
-      padding-left: 18px;
+      padding-left: 20px;
     }
 
     @include sm-min {
