--- a/assets/scss/components/header/_header-logo.scss
+++ b/assets/scss/components/header/_header-logo.scss
@@ -11,6 +11,7 @@
 
     @include md-sm {
       margin-left: -1px;
+      letter-spacing: 5.4px;
     }
 
     @include sm {
@@ -25,6 +26,19 @@
     padding: 12px 0 15px 4px;
     border: 3px solid $color-highlight;
 
+    @include lg-min {
+      padding-top: 13px;
+      padding-bottom: 14px;
+    }
+
+    @include lg-min {
+      padding-right: 1px;
+    }
+
+    @include lg-md {
+      margin: 0 7px 0 0;
+    }
+
     @include md-sm {
       padding-top: 13px;
       padding-left: 4px;
@@ -36,6 +50,18 @@
       padding-left: 4px;
       padding-bottom: 14px;
     }
-
   }
+}
+
+.logo {
+  position: relative;
+
+  @include lg-min {
+    right: 2px;
+  }
+
+  @include sm {
+    left: 1px;
+  }
+
 }
