--- a/assets/scss/components/header/_header.scss
+++ b/assets/scss/components/header/_header.scss
@@ -13,6 +13,10 @@
   background-size: cover;
   align-content: center;
 
+  @include lg-min {
+    padding-left: 20px;
+  }
+
   @include lg-md {
     min-height: 766px;
   }
