--- a/assets/scss/components/sections/_section-posts.scss
+++ b/assets/scss/components/sections/_section-posts.scss
@@ -2,9 +2,13 @@
 @use "../../presets" as *;
 
 .posts {
+  @include lg-min {
+    margin: 0 310px;
+  }
+
   &__container {
     @include lg-min {
-      margin: 102px 310px 0 310px;
+      margin: 102px auto 0 auto;
     }
 
     @include lg-md {
@@ -69,8 +73,9 @@
     }
 
     @include sm {
-      margin-left: 22px;
+      margin: 0 29px 20px 22px;
       grid-template-areas: "a1" "a2" "a3" "a4" "a5" "a6";
+      grid-template-columns: repeat(1, 1fr);
     }
   }
 
@@ -88,77 +93,102 @@
   justify-content: space-between;
   align-items: center;
 
-  &:nth-child(1),
-  &:nth-child(4),
-  &:nth-child(5) {
+  &__image {
+    height: 300px;
+    background-size: cover;
+    background-position: 50% 50%;
+    width: 100%;
+  }
+
+  &:nth-child(1) {
+    margin-right: -8px;
+
     @include lg-md {
-      width: 628px;
+      margin-right: -1px;
     }
 
     @include md-sm {
-      width: 352px;
-    }
-
-    @include sm {
-      width: 532px;
+      margin: 0;
     }
   }
 
-  &:nth-child(2),
-  &:nth-child(3),
-  &:nth-child(6) {
+  &:nth-child(2) {
+    margin: 0 -13px 0 8px;
+
     @include lg-md {
-      width: 304px;
+      margin: 0 -1px 0 1px;
     }
 
     @include md-sm {
-      width: 352px;
+      margin: 0 -1px 0 0;
     }
 
     @include sm {
-      width: 532px;
+      margin: 0 -8px 0 0;
     }
   }
 
-  &:nth-child(1),
-  &:nth-child(4),
+  &:nth-child(3) {
+    margin: 0 -17px 0 13px;
+
+    @include lg-md {
+      margin: 0;
+    }
+
+    @include md-sm {
+      margin: 0;
+    }
+
+    @include sm {
+      margin: 0 -8px 0 0;
+    }
+  }
+
+  &:nth-child(4) {
+    margin-right: -4px;
+
+    @include lg-md {
+      margin: 0 -1px 0 0;
+    }
+
+    @include md-sm {
+      margin: 0 -1px 0 0;
+    }
+
+    @include sm {
+      margin-right: -8px;
+    }
+  }
+
   &:nth-child(5) {
-    .post-item__image {
-      @include lg-md {
-        width: 628px;
-        height: 300px;
-      }
+    margin: 0 -8px 0 4px;
 
-      @include md-sm {
-        width: 352px;
-        height: 300px;
-      }
+    @include lg-md {
+      margin: 0 -1px 0 0;
+    }
 
-      @include sm {
-        width: 532px;
-        height: 300px;
-      }
+    @include md-sm {
+      margin: 0;
+    }
+
+    @include sm {
+      margin: 0 -8px 0 0;
     }
   }
 
-  &:nth-child(2),
-  &:nth-child(3),
   &:nth-child(6) {
-    .post-item__image {
-      @include lg-md {
-        width: 304px;
-        height: 300px;
-      }
+    margin: 0 -17px 0 8px;
 
-      @include md-sm {
-        width: 352px;
-        height: 300px;
-      }
+    @include lg-md {
+      margin: 0 -1px 0 1px;
+    }
 
-      @include sm {
-        width: 532px;
-        height: 300px;
-      }
+    @include md-sm {
+      margin: 0 -1px 0 0;
+    }
+
+    @include sm {
+      margin: 0 -8px 0 0;
     }
   }
 
@@ -282,6 +312,7 @@
 
         @include lg-md {
           top: 9px;
+          left: 1px;
         }
 
         @include md-sm {
@@ -327,6 +358,7 @@
 
         @include md-sm {
           top: 20px;
+          left: 1px;
         }
 
         @include sm {
@@ -341,7 +373,7 @@
 
         @include md-sm {
           padding: 0 40px;
-          bottom: 20px;
+          bottom: 19px;
         }
 
         @include sm {
@@ -357,7 +389,7 @@
       &__title {
         top: 6px;
         left: 1px;
-        letter-spacing: 1.1px;
+        letter-spacing: 1.05px;
 
         @include md-sm {
           top: -10px;
@@ -407,8 +439,9 @@
   height: 60px;
   background-color: #575E73;
   font-size: 18px;
-  letter-spacing: 1.7px;
+  letter-spacing: 1.8px;
   border: 2px solid #2d3651;
+  margin-left: 16px;
 
   &:hover {
     background-color: #d66926;
@@ -424,6 +457,14 @@
       left: 1px;
       letter-spacing: 1.8px;
     }
+  }
+
+  @include lg-md {
+    margin: 0;
+  }
+
+  @include md-sm {
+    margin: 0;
   }
 
   @include sm {
