--- a/assets/scss/components/sections/_subscribe-form.scss
+++ b/assets/scss/components/sections/_subscribe-form.scss
@@ -8,8 +8,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 19.5px;
+  gap: 19px;
   padding-left: 18px;
+
+  @include lg-min {
+    padding-left: 35px;
+  }
 
   @include lg-md {
     align-items: normal;
@@ -38,7 +42,7 @@
   border: none;
   border-bottom: 1px solid #4C546B;
   letter-spacing: 2px;
-  padding-left: 30px;
+  padding-left: 31px;
   color: white;
 
   &:hover {
@@ -49,12 +53,12 @@
     border-right: 2px solid #5E657A;
     position: relative;
     right: 2px;
+    bottom: 1px;
   }
 
   &::placeholder {
     color: white;
     font-size: 18px;
-
     position: relative;
     right: 27px;
 
@@ -69,17 +73,26 @@
   }
 
   &:nth-child(1) {
+    @include lg-min {
+      letter-spacing: 1.8px;
+    }
 
     @include lg-md {
+      position: relative;
+      right: 2px;
       max-width: 302px;
     }
 
     @include md-sm {
+      position: relative;
+      bottom: 1px;
       width: 100%;
     }
 
     @include sm {
       width: 100%;
+      position: relative;
+      bottom: 2px;
     }
 
     &::placeholder {
@@ -89,24 +102,33 @@
 
       @include lg-md {
         top: 0;
-        padding-left: 20px;
+        padding-left: 18px;
       }
 
       @include md-sm {
-        top: 0;
-        padding-left: 18px;
+        top: 1px;
+        padding-left: 16px;
         letter-spacing: 1.9px;
       }
 
       @include sm {
-        padding-left: 19px;
-        top: 0;
+        padding-left: 16px;
+        top: 1px;
         letter-spacing: 1.7px;
       }
     }
   }
 
   &:nth-child(2) {
+    @include lg-min {
+      letter-spacing: 1.8px;
+    }
+
+    @include lg-min {
+      position: relative;
+      left: 1px;
+    }
+
     @include lg-md {
       max-width: 304px;
     }
@@ -119,6 +141,10 @@
       width: 100%;
     }
 
+    &:hover {
+      padding-left: 29px;
+    }
+
     &::placeholder {
       opacity: 0.51;
       position: relative;
@@ -126,12 +152,12 @@
       padding-left: 31px;
 
       @include lg-md {
-        padding-left: 23.4px;
+        padding-left: 21px;
         top: -1px
       }
 
       @include sm {
-        padding-left: 18px;
+        padding-left: 16px;
         top: 0;
         letter-spacing: 1.8px;
       }
@@ -146,27 +172,30 @@
   border-bottom: 1px solid #72788A;
   display: flex;
   align-items: center;
+  justify-content: center;
   font-size: 18px;
   letter-spacing: 2px;
-  padding-left: 162px;
   margin-right: 19.6px;
+  padding-left: 1px;
 
   &:hover {
     background-color: #D66926;
     border: 2px solid white;
+  }
+
+  @include lg-min {
+    letter-spacing: 1.8px;
     position: relative;
-    bottom: 1px;
-    right: 2px;
+    left: 2px;
   }
 
   @include lg-md {
     max-width: 302px;
-    padding-left: 109.6px;
     font-size: 16px;
     position: relative;
-    top: 1px;
     left: 4px;
     letter-spacing: 1.7px;
+    padding: 3px 0 0 3px;
   }
 
   @include md-sm {
@@ -184,7 +213,6 @@
 
 .subscribe-md-sm {
   display: flex;
-  gap: 19.5px;
   width: 100%;
 
   @include md-min {
@@ -197,13 +225,15 @@
 
   &__email {
     width: 100%;
-    height: 60px;
+    height: 61px;
     background-color: #38405A;
     border: none;
-    border-bottom: 1px solid #4C546B;
-    letter-spacing: 2px;
+    border-bottom: 2px solid #4C546B;
+    letter-spacing: 1.9px;
     color: white;
     padding-left: 24px;
+    padding-top: 3px;
+    margin-right: 19px;
 
     &::placeholder {
       padding-left: 17px;
@@ -226,12 +256,15 @@
     width: 100%;
     height: 60px;
     background-color: #424B63;
-    border-bottom: 1px solid #72788A;
+    border-bottom: 2px solid #72788A;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 18px;
-    letter-spacing: 2px;
+    letter-spacing: 1.8px;
+    position: relative;
+    left: 1px;
+    padding: 1px 12px 0 14px;
 
     &:hover {
       background-color: #D66926;
