--- a/assets/scss/components/sections/skills/_skill-item.scss
+++ b/assets/scss/components/sections/skills/_skill-item.scss
@@ -7,92 +7,309 @@
 
   &:nth-of-type(1) {
     @include lg-min {
-      margin-right: -1px;
+      height: 350px;
+      margin-right: -9px;
     }
 
     @include lg-md {
+      height: 350px;
       margin-right: 4px;
+    }
+
+    @include md-sm {
+      height: 350px;
+
+      .skill-item__title {
+        padding-left: 2px;
+      }
     }
   }
 
   &:nth-of-type(2) {
     @include lg-min {
-      margin-left: -1px;
+      height: 350px;
+      margin-left: 7px;
+      margin-right: -12px;
     }
 
     @include lg-md {
       margin-left: -4px;
+
+      .skill-item__title {
+        padding: 1px 0 0 2px;
+      }
+    }
+
+    @include md-sm {
+      height: 710px;
+      margin-right: -1px;
+
+      .skill-item__title {
+        padding-left: 3px;
+        letter-spacing: 2px;
+      }
     }
   }
 
   &:nth-of-type(3) {
     @include lg-min {
-      margin-left: -2px;
+      height: 350px;
+      margin-left: 11px;
+      margin-right: -10px;
+
+      .skill-item__title {
+        padding-left: 8px;
+      }
     }
 
     @include lg-md {
+      height: 350px;
       margin-right: -5px;
+
+      .skill-item__title {
+        letter-spacing: 2px;
+        margin-left: 2px;
+      }
+    }
+
+    @include md-sm {
+      height: 350px;
+
+      .skill-item__title {
+        padding-left: 2px;
+        letter-spacing: 1.8px;
+      }
+    }
+
+    @include sm {
+      .skill-item__title {
+        letter-spacing: 1.9px;
+        padding-left: 1px;
+      }
     }
   }
 
   &:nth-of-type(4) {
     @include lg-min {
-      margin: 0 -1px 0 0;
+      height: 350px;
+      margin: 0px -6px 0 0;
+
+      .skill-item__title {
+        padding: 1px 0 0 3px;
+      }
     }
 
     @include lg-md {
       margin-left: 5px;
+
+      .skill-item__title {
+        letter-spacing: 2px;
+        margin-left: 3px;
+      }
+    }
+
+    @include md-sm {
+      height: 350px;
+      margin-right: -1px;
+
+      .skill-item__title {
+        padding: 0 0 23px 1px;
+        letter-spacing: 1.8px;
+      }
+    }
+
+    @include sm {
+      .skill-item__title {
+        letter-spacing: 1.8px;
+      }
     }
   }
 
   &:nth-of-type(5) {
     @include lg-min {
-      margin: 0 2px 0 1px;
+      height: 350px;
+      margin: 0 -11px 0 6px;
+
+      .skill-item__title {
+        padding: 1px 0 0 2px;
+      }
     }
 
     @include lg-md {
+      height: 350px;
       margin-right: 4px;
+
+      .skill-item__title {
+        letter-spacing: 2px;
+        margin-left: 3px;
+      }
+    }
+
+    @include md-sm {
+      height: 720px;
+
+      .skill-item__title {
+        padding-left: 2px;
+        letter-spacing: 1.8px;
+      }
+    }
+
+    @include sm {
+      .skill-item__title {
+        letter-spacing: 1.8px;
+        padding-left: 2px;
+      }
     }
   }
 
   &:nth-of-type(6) {
     @include lg-min {
-      margin: 0 0 0 -2px;
+      height: 710px;
+      margin: 0px -10px 0 11px;
+
+      .skill-item__title {
+        padding: 1px 0 0 9px;
+      }
     }
 
     @include lg-md {
+      height: 710px;
       margin-left: -4px;
+
+      .skill-item__title {
+        letter-spacing: 2px;
+        margin-left: 2px;
+      }
+    }
+
+    @include md-sm {
+      height: 350px;
+      margin-right: -1px;
+
+      .skill-item__title {
+        padding-left: 2px;
+        letter-spacing: 1.8px;
+      }
+    }
+
+    @include sm {
+      .skill-item__title {
+        letter-spacing: 1.8px;
+        padding-left: 2px;
+      }
     }
   }
 
   &:nth-of-type(7) {
     @include lg-min {
-      margin: 0 -1px 0 0;
+      height: 350px;
+      margin: 0 -6px 0 0;
+
+      .skill-item__title {
+        padding: 1px 0 0 3px;
+      }
     }
 
     @include lg-md {
+      height: 710px;
       margin-right: -3px;
+      position: relative;
+      bottom: 175px;
+
+      .skill-item__title {
+        letter-spacing: 2px;
+        margin-left: 2px;
+      }
+    }
+
+    @include md-sm {
+      height: 360px;
+      margin-right: -1px;
+
+      .skill-item__title {
+        padding-left: 3px;
+        letter-spacing: 1.8px;
+      }
+    }
+
+    @include sm {
+      .skill-item__title {
+        letter-spacing: 1.8px;
+        padding-left: 2px;
+      }
     }
   }
 
   &:nth-of-type(8) {
     @include lg-min {
-      margin: 0 -1px 0 1px;
+      height: 350px;
+      margin: 0 -9px 0 6px;
+
+      .skill-item__title {
+        padding: 1px 0 0 3px;
+      }
     }
 
     @include lg-md {
       margin-left: 5px;
       margin-right: 4px;
+      position: relative;
+      bottom: 175px;
+
+      .skill-item__title {
+        letter-spacing: 2px;
+        margin-left: 2px;
+      }
+    }
+
+    @include md-sm {
+      height: 350px;
+
+      .skill-item__title {
+        padding-left: 2px;
+        letter-spacing: 1.7px;
+      }
+    }
+    @include sm {
+      .skill-item__title {
+        letter-spacing: 1.8px;
+        padding: 2px 22px 0 0;
+      }
     }
   }
 
   &:nth-of-type(9) {
     @include lg-min {
-      margin: 0 2px 0 -1px;
+      height: 350px;
+      margin: 0 -11px 0 7px;
     }
 
     @include lg-md {
       margin-left: 5px;
+      position: relative;
+      bottom: 175px;
+
+      .skill-item__title {
+        letter-spacing: 2px;
+        margin-left: 2px;
+      }
+    }
+
+    @include md-sm {
+      height: 350px;
+      margin-right: -1px;
+
+      .skill-item__title {
+        padding-left: 2px;
+        letter-spacing: 1.8px;
+      }
+    }
+
+    @include sm {
+      .skill-item__title {
+        letter-spacing: 1.8px;
+        padding-left: 2px;
+      }
     }
   }
 
@@ -117,7 +334,7 @@
     inset: 0;
 
     @include lg-min {
-      padding: 2px 0 0 3px;
+      padding: 0 0 0 2px;
       letter-spacing: 2px;
     }
 
@@ -162,7 +379,8 @@
     grid-area: a#{$i};
 
     @include sm {
-      margin-left: 2px;
+      margin: 0 1px 0 2px;
+      height: 350px;
     }
   }
 }
