--- a/assets/scss/components/sections/skills/_skills.scss
+++ b/assets/scss/components/sections/skills/_skills.scss
@@ -2,6 +2,9 @@
 @use "../../../mixins" as *;
 
 .skills {
+  @include lg-md {
+    height: 1925px;
+  }
 
   @include sm-min {
     padding: $gap-sm;
@@ -22,7 +25,7 @@
       gap: 10px;
       grid-template-areas: "a1 a1 a2 a3" "a4 a5 a5 a6" "a7 a8 a9 a6";
       grid-template-columns: repeat(4, 1fr);
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
 
     @include lg-md {
@@ -41,14 +44,6 @@
       gap: $gap;
       grid-template-areas: "a1" "a2" "a3" "a4" "a5" "a6" "a7" "a8" "a9";
     }
-
-    @media (min-height: 691px) {
-      grid-auto-rows: calc(33.333vh - 13.333px);
-    }
-
-    @media (max-height: 690px) {
-      grid-auto-rows: calc(230px - 13.333px);
-    }
   }
 
   &__actions {
@@ -56,8 +51,14 @@
     justify-content: center;
     margin-top: $gap;
 
+    @include lg-min {
+      margin: 0 0 30px 17px;
+    }
+
     @include lg-md {
-      margin-top: 19px;
+      margin-top: 0;
+      position: relative;
+      bottom: 156px;
     }
 
     @include sm-min {
