--- a/assets/scss/components/header/_header-navbar.scss
+++ b/assets/scss/components/header/_header-navbar.scss
@@ -87,6 +87,10 @@
   }
 
   &__list {
+    @include lg-md {
+      letter-spacing: 1.8px;
+    }
+
     @include md-min {
       display: grid;
       gap: $gap;
@@ -112,17 +116,29 @@
       margin: $gap;
     }
 
+    &:nth-of-type(1) {
+      @include lg-md {
+        position: relative;
+        left: 3px;
+      }
+    }
+
     &:nth-of-type(2) {
       @include lg-min {
         position: relative;
         left: 1px;
+      }
+
+      @include lg-md {
+        position: relative;
+        left: 2px;
       }
     }
 
     &:nth-of-type(3) {
       @include lg-md {
         position: relative;
-        right: 2px;
+        right: 1px;
       }
     }
   }
