--- a/assets/scss/components/sections/_section-posts.scss
+++ b/assets/scss/components/sections/_section-posts.scss
@@ -87,17 +87,39 @@
 
 .post-item {
   background-color: #eee;
-  height: 550px;
+  min-height: 550px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
 
   &__image {
-    height: 300px;
-    background-size: cover;
+    min-height: 300px;
     background-position: 50% 50%;
+    background-size: cover;
     width: 100%;
+  }
+
+  &__title {
+    font-size: 18px;
+    color: #637588;
+    font-weight: 700;
+    letter-spacing: 0.9px;
+    line-height: 20px;
+    position: relative;
+    font-family: "Roboto Slab", serif;
+    text-align: center;
+  }
+
+  &__text {
+    color: #637588;
+    text-align: center;
+    letter-spacing: 0;
+    line-height: 20px;
+    position: relative;
+    bottom: 27px;
+    padding: 0 18px;
+    right: 2px;
   }
 
   &:nth-child(1) {
@@ -192,36 +214,30 @@
     }
   }
 
-  &__title {
-    font-size: 18px;
-    color: #637588;
-    font-weight: 700;
-    letter-spacing: 0.9px;
-    line-height: 20px;
-    position: relative;
-    font-family: "Roboto Slab", serif;
-    text-align: center;
-  }
-
-  &__text {
-    color: #637588;
-    text-align: center;
-    letter-spacing: 0;
-    line-height: 20px;
-    position: relative;
-    bottom: 27px;
-    padding: 0 18px;
-    right: 2px;
-  }
-
   &:nth-child(1) {
     .post-item {
       &__title {
         top: 2px;
         left: 1px;
 
+        @include lg-min {
+          letter-spacing: 0.91px;
+        }
+
+        @include lg-md {
+          letter-spacing: 0.91px;
+          left: 0.5px;
+        }
+
         @include md-sm {
-          top: 20px;
+          letter-spacing: 0.95px;
+          left: 3px;
+        }
+
+        @include sm {
+          top: 5px;
+          left: 1px;
+          display: flex;
         }
       }
 
@@ -231,7 +247,11 @@
         padding: 0 28px;
 
         @include md-sm {
-          bottom: 20px;
+          bottom: 60px;
+        }
+
+        @include sm {
+
         }
       }
     }
@@ -243,7 +263,7 @@
         bottom: 2px;
 
         @include lg-md {
-          top: 9px;
+          top: 9px
         }
 
         @include md-sm {
@@ -270,7 +290,7 @@
         @include sm {
           padding: 0 130px;
           bottom: 38px;
-          left: 1px;
+          left: 0.5px;
         }
       }
     }
@@ -286,6 +306,7 @@
         }
 
         @include sm {
+          letter-spacing: 0.85px;
           top: -2px;
         }
       }
@@ -298,7 +319,7 @@
         @include sm {
           padding: 0 130px;
           bottom: 27px;
-          left: 0;
+          left: -0.5px;
         }
       }
     }
@@ -308,7 +329,11 @@
     .post-item {
       &__title {
         bottom: 2px;
-        letter-spacing: 1px;
+
+        @include lg-min {
+          letter-spacing: 1.05px;
+          margin-left: 1px;
+        }
 
         @include lg-md {
           top: 9px;
@@ -316,10 +341,13 @@
         }
 
         @include md-sm {
-          top: 10px;
+          top: 9px;
+          letter-spacing: 1.02px;
+          left: 1px;
         }
 
         @include sm {
+          letter-spacing: 1px;
           bottom: 7px;
           left: 1px;
         }
@@ -333,11 +361,13 @@
         }
 
         @include md-sm {
-          bottom: 26px;
+          bottom: 49px;
+          left: 0;
           padding: 0 40px;
         }
 
         @include sm {
+          padding: 0;
           bottom: 65px;
           right: 0;
           margin: 0 30px;
@@ -352,17 +382,27 @@
         top: 8px;
         padding: 0 12px;
 
-        @include lg-md {
-          top: 9px;
+        @include lg-min {
+          letter-spacing: 0.95px;
+          margin-left: 1px;
         }
 
-        @include md-sm {
-          top: 20px;
+        @include lg-md {
+          letter-spacing: 1px;
+          top: 9px;
           left: 1px;
         }
 
+        @include md-sm {
+          top: -10px;
+          left: 1px;
+          letter-spacing: 0.97px;
+        }
+
         @include sm {
-          top: 9px;
+          letter-spacing: 0.96px;
+          left: 0.5px;
+          top: -1px;
         }
       }
 
@@ -373,11 +413,12 @@
 
         @include md-sm {
           padding: 0 40px;
-          bottom: 19px;
+          bottom: 79px;
+          left: -1px;
         }
 
         @include sm {
-          bottom: 50px;
+          bottom: 70px;
           right: 0;
         }
       }
@@ -391,11 +432,18 @@
         left: 1px;
         letter-spacing: 1.05px;
 
+        @include lg-md {
+          left: 0;
+        }
+
         @include md-sm {
           top: -10px;
+          left: 0;
         }
 
         @include sm {
+          letter-spacing: 1.07px;
+          left: 0;
           top: -10px;
         }
       }
@@ -407,7 +455,7 @@
 
         @include lg-md {
           bottom: 36px;
-          right: 3px;
+          right: 2.5px;
           padding: 0 26px;
         }
 
@@ -420,6 +468,7 @@
         @include sm {
           bottom: 52px;
           margin: 0 96px;
+          right: 0.5px;
         }
       }
     }
@@ -470,5 +519,11 @@
   @include sm {
     width: 100%;
     margin: 0 22px;
+  }
+}
+
+.hide-sm-plus {
+  @include sm-min {
+    display: none;
   }
 }
