--- a/assets/scss/components/sections/skills/_skill-item.scss
+++ b/assets/scss/components/sections/skills/_skill-item.scss
@@ -14,13 +14,18 @@
     @include lg-md {
       height: 350px;
       margin-right: 4px;
+
+      .skill-item__title {
+        letter-spacing: 2.1px;
+        padding-left: 2px;
+      }
     }
 
     @include md-sm {
       height: 350px;
 
       .skill-item__title {
-        padding-left: 2px;
+        padding-left: 1px;
       }
     }
   }
@@ -30,6 +35,10 @@
       height: 350px;
       margin-left: 7px;
       margin-right: -12px;
+
+      .skill-item__image {
+        background-position-x: 1px;
+      }
     }
 
     @include lg-md {
@@ -37,6 +46,7 @@
 
       .skill-item__title {
         padding: 1px 0 0 2px;
+        letter-spacing: 2px;
       }
     }
 
@@ -49,6 +59,13 @@
         letter-spacing: 2px;
       }
     }
+
+    @include sm {
+      .skill-item__title {
+        letter-spacing: 2px;
+        padding-left: 2px;
+      }
+    }
   }
 
   &:nth-of-type(3) {
@@ -58,7 +75,11 @@
       margin-right: -10px;
 
       .skill-item__title {
-        padding-left: 8px;
+        padding-left: 9px;
+      }
+
+      .skill-item__image {
+        background-position-x: 0;
       }
     }
 
@@ -83,8 +104,8 @@
 
     @include sm {
       .skill-item__title {
-        letter-spacing: 1.9px;
-        padding-left: 1px;
+        letter-spacing: 2px;
+        padding-left: 2px;
       }
     }
   }
@@ -121,6 +142,7 @@
     @include sm {
       .skill-item__title {
         letter-spacing: 1.8px;
+        padding-left: 2px;
       }
     }
   }
@@ -168,7 +190,11 @@
       margin: 0px -10px 0 11px;
 
       .skill-item__title {
-        padding: 1px 0 0 9px;
+        padding: 1px 0 0 10px;
+      }
+
+      .skill-item__image {
+        background-position-x: 0;
       }
     }
 
@@ -179,6 +205,10 @@
       .skill-item__title {
         letter-spacing: 2px;
         margin-left: 2px;
+      }
+
+      .skill-item__image {
+        //background-position-x: 0;
       }
     }
 
