--- a/assets/scss/common/_classes.scss
+++ b/assets/scss/common/_classes.scss
@@ -23,24 +23,12 @@
       font-size: 1.125rem;
       width: 250px;
       height: 60px;
-
-      &:nth-of-type(1) {
-        padding-left: 19px;
-      }
-
-      &:nth-of-type(2) {
-        padding-left: 16px;
-      }
     }
 
     @include lg-md {
       width: 200px;
       height: 50px;
-      padding-left: 18px;
-
-      &:nth-of-type(2) {
-        margin-left: 1px;
-      }
+      padding-left: 15px;
     }
 
     @include md {
@@ -49,24 +37,14 @@
     }
 
     @include md-sm {
-      padding-top: 1px;
-      padding-left: 17px;
-
-      &:nth-of-type(2) {
-        padding-left: 19px;
-      }
+      letter-spacing: 0.8px;
+      text-align: center;
+      padding-left: 15px;
     }
 
     @include sm {
-      padding-top: 2px;
-
-      &:nth-of-type(1) {
-        padding-left: 17px;
-      }
-
-      &:nth-of-type(2) {
-        padding-left: 19px;
-      }
+      letter-spacing: 0.8px;
+      padding-left: 15px;
     }
   }
 
@@ -76,39 +54,18 @@
     height: 60px;
     font-size: 1.125rem;
 
-    @include lg-min {
-      padding-left: 19px;
-    }
-
-    @include lg-md {
-      padding-top: 5px;
-      padding-right: 15px;
-      height: 66px;
-    }
-
-    @include md-sm {
-      position: relative;
-      left: 5px;
-      padding-left: 20px;
-    }
-
     @include sm-min {
       width: 350px;
     }
 
     @include sm {
       width: 100%;
-      margin-left: 2px;
     }
   }
 }
 
 input:focus {
   outline-width: 0;
-}
-
-input:focus::placeholder {
-  color: transparent;
 }
 
 .empty {
