--- a/assets/scss/components/header/_header-content.scss
+++ b/assets/scss/components/header/_header-content.scss
@@ -14,7 +14,8 @@
     }
 
     @include md-sm {
-      margin-top: 120px;
+      position: relative;
+      bottom: 2px;
     }
   }
 
@@ -22,39 +23,30 @@
     margin: 0 0 53px 0;
 
     @include lg-min {
-      letter-spacing: 4.5px;
-      margin-right: 4px;
+      position: relative;
+      bottom: 0;
+      letter-spacing: 4.8px;
+      margin-right: 1px;
     }
 
     @include lg-md {
-      margin: 0 0 42px 0;
+      margin: -8px 1px 40px 0;
+      letter-spacing: 3.2px;
     }
 
     @include md-sm {
       margin-bottom: 30px;
+      letter-spacing: 2.4px;
+      margin-right: 1px;
     }
 
-    @media (max-width: 575px) {
-      display: none;
+    @include sm {
+      margin-bottom: 32px;
+      position: relative;
+      bottom: 1px;
+      letter-spacing: 2.4px;
+      margin-right: 1px;
     }
-  }
-
-  &__title-1,
-  &__title-2 {
-    margin: 0;
-    position: relative;
-    @media (min-width: 576px) {
-      display: none;
-    }
-  }
-
-  &__title-1 {
-    bottom: 20px;
-    right: 4px;
-  }
-
-  &__title-2 {
-    bottom: 17px;
   }
 
   &__actions {
@@ -63,13 +55,22 @@
     gap: $gap;
 
     @include lg-min {
-      margin-left: 1px;
+      margin-right: 1px;
+    }
+
+    @include lg-md {
+      position: relative;
+      top: 3px;
+    }
+
+    @include md-sm {
+      position: relative;
+      top: 3px;
     }
 
     @include sm {
       align-items: center;
-      position: relative;
-      top: 22px;
+      flex-direction: column;
     }
   }
 }
