--- a/assets/scss/components/sections/_subscribe-form.scss
+++ b/assets/scss/components/sections/_subscribe-form.scss
@@ -4,70 +4,68 @@
 .subscribe-form {
   height: 120px;
   background-color: #2d3651;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 19px;
-  padding-left: 18px;
-
-  @include lg-min {
-    padding-left: 35px;
-  }
-
-  @include lg-md {
-    align-items: normal;
-    padding-top: 19px;
-    height: 100px;
-  }
 
   @include md-sm {
-    height: 182px;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0 22px;
+    height: 200px;
   }
 
   @include sm {
-    flex-direction: column;
-    height: 262px;
-    padding: 0 22px;
+    height: 280px;
+  }
+
+  &__container {
+    display: flex;
+    gap: 32px;
+    padding: 30px 20px;
+    max-width: 1340px;
+    margin: 0 auto;
+
+    @include lg-md {
+      gap: 28px;
+    }
+
+    @include md-sm {
+      flex-direction: column;
+      gap: 18px;
+    }
+
+    @include sm {
+      flex-direction: column;
+      gap: 20px;
+    }
   }
 }
 
 .subscribe-input {
-  width: 420px;
+  width: 100%;
   height: 60px;
   background-color: #38405A;
   border: none;
-  border-bottom: 2px solid #4C546B;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.25);
   letter-spacing: 2px;
   padding-left: 31px;
   color: white;
 
   &:hover {
     background-color: #4C546B;
-    border-bottom: 2px solid white;
+    position: relative;
     border-top: 2px solid #5E657A;
     border-left: 2px solid #5E657A;
     border-right: 2px solid #5E657A;
-    position: relative;
-    right: 2px;
-    bottom: 1px;
-    inset: 0;
-    padding-top: 0;
+    border-bottom: 2px solid white;
+  }
+
+  &:focus {
+    border: none;
+    transition: 0.75s;
   }
 
   &::placeholder {
-    color: white;
+    color: #637596;
     font-size: 18px;
     position: relative;
     right: 27px;
-
-    @include lg-md {
-      font-size: 16px;
-      letter-spacing: 1.6px;
-    }
+    letter-spacing: 2.7px;
 
     @include sm {
       padding-left: 20px;
@@ -79,53 +77,51 @@
       letter-spacing: 1.8px;
 
       &:hover {
-        padding-left: 29px;
+        padding-left: 31px;
+        padding-bottom: 3px;
       }
     }
 
     @include lg-md {
-      position: relative;
-      right: 2px;
-      max-width: 302px;
-
       &:hover {
-        padding-left: 27px;
+        padding-bottom: 3px;
       }
     }
 
     @include md-sm {
-      position: relative;
-      bottom: 1px;
       width: 100%;
-      padding-left: 32px;
+      padding-left: 42px;
+
+      &:hover {
+        padding-bottom: 3px;
+      }
     }
 
     @include sm {
       width: 100%;
       position: relative;
-      bottom: 2px;
+
+      &:hover {
+        padding-bottom: 3px;
+      }
     }
 
     &::placeholder {
       position: relative;
       top: 2px;
-      padding-left: 27px;
+      padding-left: 28px;
 
       @include lg-md {
-        top: 0;
-        padding-left: 18px;
+        padding-left: 28px;
       }
 
       @include md-sm {
-        top: 1px;
-        padding-left: 16px;
-        letter-spacing: 1.75px;
+        padding-top: 3px;
+        padding-left: 17px;
       }
 
       @include sm {
-        padding-left: 16px;
-        top: 1px;
-        letter-spacing: 1.8px;
+        letter-spacing: 2.7px;
       }
     }
   }
@@ -133,13 +129,10 @@
   &:nth-child(2) {
     @include lg-min {
       letter-spacing: 1.8px;
-      position: relative;
-      left: 1px;
     }
 
     @include lg-md {
       position: relative;
-      left: 1px;
       max-width: 304px;
     }
 
@@ -152,42 +145,35 @@
     }
 
     &:hover {
-      padding-left: 29px;
+      padding-left: 31px;
+      padding-bottom: 3px;
     }
 
     &::placeholder {
-      opacity: 0.51;
       position: relative;
-      top: 1px;
-      padding-left: 31px;
-
-      @include lg-md {
-        padding-left: 20px;
-        top: -1px;
-      }
+      top: 2px;
+      padding-left: 28px;
 
       @include sm {
-        padding-left: 16px;
-        top: 0;
-        letter-spacing: 1.8px;
+        padding-left: 28px;
+        top: 2px;
+        letter-spacing: 2.7px;
       }
     }
   }
 }
 
 .subscribe-btn {
-  width: 420px;
+  width: 100%;
   height: 60px;
   background-color: #424B63;
-  border-bottom: 2px solid #72788A;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.2);
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 18px;
-  letter-spacing: 2px;
-  margin-right: 19.6px;
-  padding-left: 1px;
-  padding-top: 1px;
+  padding-top: 2px;
+  letter-spacing: 1.8px;
 
   &:hover {
     background-color: #D66926;
@@ -195,19 +181,10 @@
     padding-top: 0;
   }
 
-  @include lg-min {
-    letter-spacing: 1.8px;
-    position: relative;
-    left: 2px;
-  }
-
   @include lg-md {
     max-width: 302px;
-    font-size: 16px;
-    position: relative;
-    left: 4px;
-    letter-spacing: 1.7px;
-    padding: 3px 0 0 3px;
+    padding: 3px 2px 0 3px;
+    margin-right: 0;
   }
 
   @include md-sm {
@@ -215,7 +192,7 @@
   }
 
   @include sm {
-    padding: 1px 0 0 2px;
+    padding-top: 2px;
     margin: 0;
     width: 100%;
     display: flex;
@@ -227,6 +204,9 @@
 .subscribe-md-sm {
   display: flex;
   width: 100%;
+  position: relative;
+  top: 2px;
+  gap: 10px;
 
   @include md-min {
     display: none;
@@ -238,30 +218,35 @@
 
   &__email {
     width: 100%;
-    height: 61px;
+    height: 60px;
     background-color: #38405A;
     border: none;
-    border-bottom: 2px solid #4C546B;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.25);
     letter-spacing: 1.8px;
     color: white;
-    padding-left: 25px;
-    padding-top: 3px;
-    margin-right: 20px;
+    padding-top: 4px;
 
     &::placeholder {
-      padding-left: 17px;
-      color: #9DA1AE;
+      padding-left: 52px;
+      color: #637596;
       font-size: 18px;
       position: relative;
       right: 22px;
+      letter-spacing: 2.7px;
     }
 
-    :hover {
+    &:hover {
       background-color: #4C546B;
       border-bottom: 2px solid white;
       border-top: 2px solid #5E657A;
       border-left: 2px solid #5E657A;
       border-right: 2px solid #5E657A;
+      padding-bottom: 3px;
+    }
+
+    &:focus {
+      border: none;
+      transition: 0.75s;
     }
   }
 
@@ -269,15 +254,14 @@
     width: 100%;
     height: 60px;
     background-color: #424B63;
-    border-bottom: 2px solid #72788A;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.2);
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 18px;
     letter-spacing: 1.8px;
-    position: relative;
-    left: 1px;
     padding: 1px 12px 0 12px;
+    margin-left: 16px;
 
     &:hover {
       background-color: #D66926;
