--- a/assets/scss/components/sections/skills/_skills.scss
+++ b/assets/scss/components/sections/skills/_skills.scss
@@ -2,10 +2,6 @@
 @use "../../../mixins" as *;
 
 .skills {
-  @include lg-md {
-    height: 1925px;
-  }
-
   @include sm-min {
     padding: $gap-sm;
   }
@@ -15,7 +11,7 @@
   }
 
   @include sm {
-    padding: $gap $gap 21px $gap;
+    padding: $gap;
   }
 
   &__container {
@@ -44,6 +40,14 @@
       gap: $gap;
       grid-template-areas: "a1" "a2" "a3" "a4" "a5" "a6" "a7" "a8" "a9";
     }
+
+    @media (min-height: 691px) {
+      grid-auto-rows: calc(33.333vh - 13.333px);
+    }
+
+    @media (max-height: 690px) {
+      grid-auto-rows: calc(230px - 13.333px);
+    }
   }
 
   &__actions {
@@ -52,13 +56,11 @@
     margin-top: $gap;
 
     @include lg-min {
-      margin: 0 0 30px 17px;
+      margin-bottom: 30px;
     }
 
-    @include lg-md {
-      margin-top: 0;
-      position: relative;
-      bottom: 156px;
+    @include md-sm {
+      margin-bottom: 29px;
     }
 
     @include sm-min {
